--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "gulp-uglify": "^3.0.2",
     "imagemin-pngquant": "^8.0.0",
     "node-sass": "^4.13.1",
-    "rimraf": "^3.0.2"
+    "rimraf": "^3.0.2",
+    "bower": "latest"
   }
 }
