--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "gulp-uglify": "^3.0.2",
     "imagemin-pngquant": "^8.0.0",
     "node-sass": "^4.13.1",
-    "rimraf": "^3.0.2",
-    "bower": "latest"
+    "rimraf": "^3.0.2"
   }
 }
